# MieleRESTServer

./: .gitignore  Makefile  MieleApi.py  MieleCrypto.py  MieleDop2.py  MieleDop2Structures.py  README.md  Server.py  config_wizard.py  murl.py  repository.yaml  requirements.txt  setup.py  test_MieleCrypto.py
dop2rs/: Cargo.toml  f.txt  hmm.txt  notes.txt  test.fdas  test.txt  testdafs.com
dop2rs/dop2marshal/: Cargo.toml
dop2rs/dop2marshal/src/: lib.rs
dop2rs/src/: attribute_registry.rs  crypto.rs  device_api.rs  macros.rs  main.rs  payload.txt  tests.rs
dop2rs/src/payloader/: attribute_ids.rs  mod.rs  parser.rs  prelude.rs  root.rs  unit_ids.rs
dop2rs/src/payloader/comm_module/: mod.rs
dop2rs/src/payloader/comm_module/config/: ip.rs  mod.rs  ssid.rs
dop2rs/src/payloader/comm_module/ident/: ident.rs  ident_label.rs  mod.rs
dop2rs/src/payloader/comm_module/request/: request.rs
dop2rs/src/payloader/comm_module/state/: datetime.rs  mod.rs  state.rs
dop2rs/src/payloader/comm_module/supervision/: config.rs
dop2rs/src/payloader/comm_module/update/: container_info.rs  control.rs  last.rs  mod.rs
dop2rs/src/payloader/device/: mod.rs
dop2rs/src/payloader/device/generic/: attributes.rs  cets.rs  (+9 more)
dop2rs/src/payloader/filesystem/: enums.rs  file_info.rs  file_list.rs  file_write.rs  mod.rs  mystery_struct.rs  rsa_key.rs  transfer.rs
dop2rs/src/payloader/helper/: types.rs
dop2rs/src/payloader/meta/: link_info.rs  mod.rs  object_ids.rs
dop2rs/src/payloader/notifications/: acknowledge.rs  mod.rs
dop2rs/tests/: oven.json  washer.json  washer_lines.txt
(+56 files in other folders)
