[package]
name = "dop2rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
num_enum = "0.7"
syn = "2.0.108"
proc-macro2 = "1.0.103"
quote = "1.0.41"
struct_iterable = "0.1.1"
derive_more = { version = "2.0.1", features=["full"] }
aes = "0.8.4"
cbc = { version = "0.1.2", features=["alloc"] }
rand = "0.9.2"
rustcrypto = "0.0.0"
hmac = "0.12.1"
sha2 = {version = "0.10.9", features=["oid"]}

